fix barButton color, change the prefix IZ -> MCD

--- a/MCDiary/MCDiary/Resouces/XIBs/Message.storyboard
+++ b/MCDiary/MCDiary/Resouces/XIBs/Message.storyboard
@@ -27,7 +27,7 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已经过了 xx 小时" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uXC-DZ-pQT">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xx 小时前" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uXC-DZ-pQT">
                                             <rect key="frame" x="34" y="22" width="100" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="Aew-r9-UNn"/>
@@ -92,8 +92,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="汪汪喵喵" id="0X4-Tm-Hpk">
-                        <barButtonItem key="leftBarButtonItem" image="Menu Button" id="XSv-PH-Aly"/>
-                        <barButtonItem key="rightBarButtonItem" image="ActionSheetBtn" id="Y30-FZ-kxr">
+                        <barButtonItem key="leftBarButtonItem" image="Menu Button" id="XSv-PH-Aly">
+                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="ActionSheet Button" id="Y30-FZ-kxr">
+                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="showMessageOption:" destination="RlZ-At-A6l" id="iWT-FY-lRJ"/>
                             </connections>
@@ -137,6 +140,8 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="yz1-sW-rmZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -149,7 +154,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ActionSheetBtn" width="27" height="7"/>
+        <image name="ActionSheet Button" width="32" height="10"/>
         <image name="Menu Button" width="19" height="15"/>
         <image name="goDetail" width="28" height="42"/>
         <image name="timeStamp" width="32" height="32"/>
