--- a/MCDiary/MCDiary/Resouces/XIBs/User.storyboard
+++ b/MCDiary/MCDiary/Resouces/XIBs/User.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="sck-TL-Gu2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="sck-TL-Gu2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -544,7 +546,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EmJ-Vm-pm1">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EmJ-Vm-pm1">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -553,7 +555,7 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a0c-vn-bDn" customClass="TPKeyboardAvoidingScrollView">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="449"/>
                                 <subviews>
-                                    <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4SF-ip-e78" customClass="MCDBorderView">
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4SF-ip-e78" customClass="MCDBorderView">
                                         <rect key="frame" x="12" y="119" width="300" height="330"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ker-jQ-1Vy" customClass="MCDTextFormField">
@@ -603,6 +605,10 @@
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="330" id="KeR-hb-vli"/>
+                                            <constraint firstAttribute="width" constant="300" id="Y6b-gC-4rg"/>
+                                        </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                 <color key="value" red="0.31372549020000001" green="0.82352941180000006" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -613,15 +619,25 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="4SF-ip-e78" firstAttribute="top" secondItem="a0c-vn-bDn" secondAttribute="top" constant="119" id="80f-Jn-udY"/>
+                                    <constraint firstItem="4SF-ip-e78" firstAttribute="leading" secondItem="a0c-vn-bDn" secondAttribute="leading" constant="12" id="a9m-tk-x4g"/>
+                                    <constraint firstItem="4SF-ip-e78" firstAttribute="trailing" secondItem="a0c-vn-bDn" secondAttribute="trailingMargin" id="yEo-Id-bw2"/>
+                                    <constraint firstAttribute="bottom" secondItem="4SF-ip-e78" secondAttribute="bottom" id="zEb-Gv-Fm4"/>
+                                </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="0.80784313725490198" green="0.96078431372549022" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" red="0.31372549020000001" green="0.82352941180000006" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="a0c-vn-bDn" secondAttribute="trailing" id="2vb-cM-ndK"/>
-                            <constraint firstItem="zVw-Y0-7xF" firstAttribute="top" secondItem="a0c-vn-bDn" secondAttribute="bottom" constant="119" id="5tc-4a-9KX"/>
-                            <constraint firstItem="a0c-vn-bDn" firstAttribute="top" secondItem="D0s-L2-tci" secondAttribute="bottom" id="iZw-YM-hbe"/>
-                            <constraint firstItem="a0c-vn-bDn" firstAttribute="leading" secondItem="ct9-Lb-I8A" secondAttribute="leading" id="yRC-ng-46Q"/>
+                            <constraint firstItem="zVw-Y0-7xF" firstAttribute="top" secondItem="a0c-vn-bDn" secondAttribute="bottom" constant="119" id="ENi-Nn-kMP"/>
+                            <constraint firstItem="a0c-vn-bDn" firstAttribute="top" secondItem="D0s-L2-tci" secondAttribute="bottom" id="OfZ-Sd-1i1"/>
+                            <constraint firstItem="a0c-vn-bDn" firstAttribute="leading" secondItem="ct9-Lb-I8A" secondAttribute="leading" id="VUM-0g-BH2"/>
+                            <constraint firstAttribute="trailing" secondItem="a0c-vn-bDn" secondAttribute="trailing" id="hBv-cy-V1G"/>
+                            <constraint firstItem="EmJ-Vm-pm1" firstAttribute="leading" secondItem="ct9-Lb-I8A" secondAttribute="leading" id="nzU-j0-TrK"/>
+                            <constraint firstItem="EmJ-Vm-pm1" firstAttribute="top" secondItem="D0s-L2-tci" secondAttribute="bottom" id="vxI-MH-0eD"/>
+                            <constraint firstItem="zVw-Y0-7xF" firstAttribute="top" secondItem="EmJ-Vm-pm1" secondAttribute="bottom" id="wCz-aJ-owV"/>
+                            <constraint firstAttribute="trailing" secondItem="EmJ-Vm-pm1" secondAttribute="trailing" id="xed-6Y-rKE"/>
                         </constraints>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
@@ -645,9 +661,4 @@
         <image name="Logout Button" width="17" height="19"/>
         <image name="Menu Button" width="19" height="15"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
