--- a/MCDiary/MCDiary/Resouces/XIBs/MyPet.storyboard
+++ b/MCDiary/MCDiary/Resouces/XIBs/MyPet.storyboard
@@ -79,6 +79,9 @@
                                 <state key="normal" image="Menu Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="showMenu:" destination="iaE-Pt-EDe" eventType="touchUpInside" id="Lao-RY-D6b"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" id="e5b-M0-X6o">
